wxdsb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wxdsb
spec:
  containers:
  - name: wxdsb
    image: wxdsb
    imagePullPolicy: Never
  restartPolicy: Never
