wxdsb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wxdsb-service
spec:
  type: NodePort
  selector:
    app: wxdsb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
