wxdsb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wxdsb-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: wxdsb
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: wxdsb-service
                port:
                  number: 80
