wxdsb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wxdsb
  labels:
    app: wxdsb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wxdsb
  template:
    metadata:
      labels:
        app: wxdsb
    spec:
      containers:
        - name: wxdsb
          image: wxdsb
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: wxdsb-service
spec:
  type: NodePort
  selector:
    app: wxdsb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wxdsb-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: wxdsb
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: wxdsb-service
                port:
                  number: 8080
---
